--- a/CSS/cristiano1.css
+++ b/CSS/cristiano1.css
@@ -7,8 +7,9 @@
     ---negro:#000000;
     ---azul:#0000ff;
 }
-html{/** Conversion a rem **/
+html{
     height: 100%;
+    font-size: 62.5%;
 }
 body{
     margin: 0;
@@ -19,39 +20,36 @@ body{
     width: 100%;
     display: grid;
 }
-.header{
-    padding: 20px;
-}
 .container{
     margin: 0 auto;
-    width: 90%;
     max-width: 1200px;
-    overflow: hidden;
 }
-
 .hero{
     background-image: 
     linear-gradient(rgba(0, 0, 0, 0.473), rgba(0, 0, 0, 0.527)),
     url('https://images8.alphacoders.com/476/thumb-1920-476725.jpg'); 
     transform: translate3d(0px, -9px, 0px);
     background-size: cover;
-    min-height: 500px;
     height: 100vh;
+    width: 100%;
     color: #000000;
 }
-
+@media(max-width:768px){
+    .hero{
+        background-size: 100% 100%;
+    }
+}
 .nav{
     --state-close: scale(0);
     --state-hamburguer:scale(1);
     --state-menu: translate(-100%);
 
-    padding: 40px 0;
+    padding: 4rem 0;
     display: grid;
     justify-content: space-between;
     align-items: center;
     grid-template-columns: repeat(2, max-content);
 }
-
 .nav:target{
     --state-menu: translate(0);
     --state-close: scale(1);
@@ -147,14 +145,32 @@ body{
     align-items: center;
     flex-direction: column;
 }
+.Title img{
+    width: 60rem;
+    height: 10rem;
+}
+@media(max-width:768px){
+    .Title img{
+        width: 40rem;
+        height: 7rem;
+    }
+}
 .desc{
     margin: 4px;
     color: #ffff;
     font-family: 'Bebas neue', sans-serif; font-size: 35px;
 }
+@media(max-width:768px){
+    .desc{
+        margin: 4px;
+        color: #ffff;
+        font-family: 'Bebas neue', sans-serif; font-size: 3rem;
+    }
+}
 .contenedor_cr7{
     width: 700px;
     margin: 15px auto;
+    place-content: center;
     font-family: arial;
     position: relative;
     overflow: hidden;
@@ -179,16 +195,36 @@ body{
 }
 .content_cr7 h4{
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     border-bottom: 1px solid #808080;
     padding: 0 1rem 2rem 1rem;
 }
 .contenedor_cr7 p{
+    font-size: 2.5rem;
     padding: 0 2rem 1.5rem 2rem;
     border-bottom: 0.1rem solid #808080;
 }
 .contenedor_cr7:hover .content_cr7{
     top: 0;
+}
+@media(max-width:768px){
+    .contenedor_cr7{
+        width: 500px;
+        margin: 15px auto;
+    }
+}
+@media(max-width:768px){
+    .contenedor_cr7 img{
+        width: 100%;
+        height: auto;
+    }
+}
+@media(max-width:768px){
+    .contenedor_cr7 p{
+        width: 500px;
+        font-size: 1.7rem;
+        margin: 15px auto;
+    }
 }
 .row{
     width: 100%;
@@ -207,24 +243,43 @@ body{
     padding: 2.5rem;
 }
 .cr7title{
-    font-size: 2rem;
+    font-size: 3rem;
     padding: 1rem;
 }
 .desccr7{
-    font-size: 1.5rem;
-    padding: 1rem;
-}
-.cr7title2{
     font-size: 2rem;
     padding: 1rem;
 }
-.desccr72{
-    font-size: 1.3rem;
+@media(max-width:768px){
+    .cr7title{
+        font-size: 2.5rem;
+        padding: 1rem;
+    }
+    .desccr7{
+        font-size: 2rem;
+        padding: 1rem;
+    }
+}
+.cr7title2{
+    font-size: 3rem;
     padding: 1rem;
 }
+.desccr72{
+    font-size: 2rem;
+    padding: 1rem;
+}
+@media(max-width:768px){
+    .cr7title2{
+        font-size: 2.5rem;
+        padding: 1rem;
+    }
+    .desccr72{
+        font-size: 2rem;
+        padding: 1rem;
+    }
+}
 .row .right{
-    display: flex;
-    align-items: center;
+    padding-left: 3rem;
 }
 .row .right .content{
     padding-left: 20px;
@@ -241,41 +296,50 @@ body{
 }
 @media (max-width: 768px){
     .row{
-        width: 90%;
+        width: 80%;
+        place-content: center;
+        margin: auto;
         grid-template-columns: 1fr;
     }
 }
-.row .right1{
+.row1{
+    width: 100%;
+    max-width: 1170px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px 30px;
+}
+.row1 .right1{
     overflow: hidden;
 }
-.row .right1 img{
+.row1 .right1 img{
     width: 100%;
     height: 100%;
     object-fit:contain ;
     padding: 2.5rem;
 }
 
-.row .left1{
-    display: flex;
-    align-items: center;
+.row1 .left1{
     padding-left: 3rem;
 }
-.row .left1 .content{
+.row1 .left1 .content{
     padding-left: 20px;
 }
-.row .left1 .content{
+.row1 .left1 .content{
     font-size: 16px;
     line-height: 26px;
     padding-bottom: 15px;
 }
 @media (max-width: 768px){
-    .row .left1 .content{
+    .row1 .left1 .content{
         padding-left: 0;
     }
 }
 @media (max-width: 768px){
-    .row{
-        width: 90%;
+    .row1{
+        width: 60%;
+        place-items: center;
+        margin: auto;
         grid-template-columns: 1fr;
     }
 }
@@ -286,9 +350,10 @@ footer{
 }
 .logos{
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
-.logos>a{
+.logos>.a_lg{
     display: flex;
     align-items: center;
     font-family: 'Bebas Neue', sans-serif;
@@ -296,4 +361,11 @@ footer{
     color: white;
     font-size: 1.5rem;
     margin: 2rem;
+}
+@media(max-width:768px){
+    .logos, .a_lg{
+        margin: auto;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
