--- a/CSS/cristiano1.css
+++ b/CSS/cristiano1.css
@@ -1,6 +1,4 @@
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 :root{
@@ -8,7 +6,8 @@
     ---azul:#0000ff;
 }
 html{
-    height: 100%;
+    padding: 0;
+    margin: 0;
     font-size: 62.5%;
 }
 body{
@@ -17,26 +16,25 @@ body{
     background-color: #000;
     color: white;
     min-height: 100vh;
-    width: 100%;
     display: grid;
 }
 .container{
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 85%;
 }
 .hero{
     background-image: 
     linear-gradient(rgba(0, 0, 0, 0.473), rgba(0, 0, 0, 0.527)),
     url('https://images8.alphacoders.com/476/thumb-1920-476725.jpg'); 
     transform: translate3d(0px, -9px, 0px);
-    background-size: cover;
     height: 100vh;
-    width: 100%;
     color: #000000;
 }
 @media(max-width:768px){
     .hero{
         background-size: 100% 100%;
+        width: 31rem;
+        height: 35rem;
     }
 }
 .nav{
@@ -56,9 +54,14 @@ body{
     --state-hamburguer:scale(0);
 }
 
-.nav__logo{
-    font-size: 2.5rem;
+.nav__logo img{
+    width: 20rem;
     z-index: 1;
+}
+@media(max-width:768px){
+    .nav__logo img{
+        width: 13rem;
+    }
 }
 
 .nav__hamburguer, .nav__close{
@@ -105,7 +108,7 @@ body{
 .nav__link{
     color: #fff;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1px;
     letter-spacing: 2px;
 }
 
@@ -138,6 +141,7 @@ body{
     }
 }
 .int{
+    padding-top: 40rem;
     width: auto;
     height: 24rem;
     display: flex;
@@ -145,14 +149,20 @@ body{
     align-items: center;
     flex-direction: column;
 }
+@media(max-width:768px){
+    .int{
+        padding-top: 0;
+        padding-bottom: 10rem;
+    }
+}
 .Title img{
     width: 60rem;
     height: 10rem;
 }
 @media(max-width:768px){
     .Title img{
-        width: 40rem;
-        height: 7rem;
+        width: 17rem;
+        height: 2rem;
     }
 }
 .desc{
@@ -164,7 +174,7 @@ body{
     .desc{
         margin: 4px;
         color: #ffff;
-        font-family: 'Bebas neue', sans-serif; font-size: 3rem;
+        font-family: 'Bebas neue', sans-serif; font-size: 2rem;
     }
 }
 .contenedor_cr7{
@@ -174,6 +184,27 @@ body{
     font-family: arial;
     position: relative;
     overflow: hidden;
+}
+@media(max-width:768px){
+    .contenedor_cr7{
+        width: 25rem;
+        margin: 15px auto;
+    }
+}
+@media(max-width:768px){
+    .contenedor_cr7 img{
+        width: 100%;
+        height: auto;
+    }
+}
+@media(max-width:768px){
+    .contenedor_cr7 p{
+        width: 30rem;
+        font-size: 1rem;
+        padding: 0 2rem 1.5rem 2rem;
+        border-bottom: 0.1rem solid #808080;
+        margin: 15px auto;
+    }
 }
 .contenedor_cr7 img{
     width: 100%;
@@ -206,25 +237,6 @@ body{
 }
 .contenedor_cr7:hover .content_cr7{
     top: 0;
-}
-@media(max-width:768px){
-    .contenedor_cr7{
-        width: 500px;
-        margin: 15px auto;
-    }
-}
-@media(max-width:768px){
-    .contenedor_cr7 img{
-        width: 100%;
-        height: auto;
-    }
-}
-@media(max-width:768px){
-    .contenedor_cr7 p{
-        width: 500px;
-        font-size: 1.7rem;
-        margin: 15px auto;
-    }
 }
 .row{
     width: 100%;
